/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
 */

allprojects {
	apply plugin: 'java'
	sourceCompatibility = 1.8
}

subprojects {
}
 